2. Design Patterns/2. Behavioral/Strategy/Example/1. Duck Simulator/Good/DuckSimulator_Good_Strategy/IQuacking.cs
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DuckSimulator_Good_Strategy
{
    public interface IQuacking
    {
        void Quack();
    }
}
